added UiRoutinesManager, interfaces, UiChromeExtensionRoutine, config, statics, and initial build

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -8,5 +8,10 @@
 	"splashScreen.joinNetwork": "splashScreen.joinNetwork",
 	"splashScreen.foundEntryNode": "splashScreen.foundEntryNode",
 	"splashScreen.initialContactQueryComplete": "splashScreen.initialContactQueryComplete",
-	"splashScreen.topologyJoinComplete": "splashScreen.topologyJoinComplete"
+	"splashScreen.topologyJoinComplete": "splashScreen.topologyJoinComplete",
+	"core.jj.uiroutine.chromeextension.name": "core.jj.uiroutine.chromeextension.name",
+	"core.jj.uiroutine.chromeextension.description": "core.jj.uiroutine.chromeextension.description",
+	"core.jj.uiroutine.chromeextension.installButtonLabel": "core.jj.uiroutine.chromeextension.installButtonLabel",
+	"uiRoutinesManager.installRoutinesHeadline": "uiRoutinesManager.installRoutinesHeadline",
+	"uiRoutinesManager.installRoutinesDescription": "uiRoutinesManager.installRoutinesDescription"
 }
