--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -17,5 +17,5 @@
 	"uiRoutinesManager.installRoutinesButtonPlaceholder": "uiRoutinesManager.installRoutinesButtonPlaceholder",
 	"uiRoutinesManager.installRoutinesWindowTitle": "uiRoutinesManager.installRoutinesWindowTitle",
 	"UiDaemon.trayTitle": "UiDaemon.trayTitle",
-	"UiDaemon.menu.quit.title": "UiDaemon.menu.quit.title",
+	"UiDaemon.menu.quit.title": "UiDaemon.menu.quit.title"
 }
