--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -2,13 +2,13 @@
 	"splashScreen.startSearchDatabase": "Initializing search database.",
 	"splashScreen.startIndexer": "Starting file indexer.",
 	"splashScreen.startSharing": "Building up bridges.",
-	"splashScreen.startTopology": "Preparing to join the network.",
+	"splashScreen.startTopology": "Preparing to join network.",
 	"splashScreen.startUi": "Starting user interface.",
 	"splashScreen.needsProxy": "Unreachable from outside. Searching for proxies.",
 	"splashScreen.joinNetwork": "Joining the network",
-	"splashScreen.foundEntryNode": "Entry node found. Gaining knowledge of the topology.",
+	"splashScreen.foundEntryNode": "Entry node found. Gaining knowledge of network topology.",
 	"splashScreen.initialContactQueryComplete": "Initial nodes found.",
-	"splashScreen.topologyJoinComplete": "Successfully joined the network. Preparing anonymity layer.",
+	"splashScreen.topologyJoinComplete": "Successfully joined network. Preparing anonymity layer.",
 	"core.jj.uiroutine.chromeextension.name": "core.jj.uiroutine.chromeextension.name",
 	"core.jj.uiroutine.chromeextension.description": "core.jj.uiroutine.chromeextension.description",
 	"core.jj.uiroutine.chromeextension.installButtonLabel": "core.jj.uiroutine.chromeextension.installButtonLabel",
@@ -17,6 +17,6 @@
 	"uiRoutinesManager.installRoutinesButtonPlaceholder": "uiRoutinesManager.installRoutinesButtonPlaceholder",
 	"uiRoutinesManager.installRoutinesWindowTitle": "uiRoutinesManager.installRoutinesWindowTitle",
 	"UiDaemon.trayTitle": "UiDaemon.trayTitle",
-	"UiDaemon.menu.quit.title": "UiDaemon.menu.quit.title",
+	"UiDaemon.menu.quit.title": "Quit",
 	"splashScreen.undefined": "splashScreen.undefined"
 }
