--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -5,7 +5,7 @@
 	"splashScreen.startTopology": "Preparing to join network...",
 	"splashScreen.startUi": "Starting user interface...",
 	"splashScreen.needsProxy": "Unreachable from outside. Searching for proxies...",
-    "splashScreen.needsNoProxy": "Reachable from outside. Marvelous!",
+	"splashScreen.needsNoProxy": "Reachable from outside. Marvelous!",
 	"splashScreen.joinNetwork": "Joining the network...",
 	"splashScreen.foundEntryNode": "Entry node found. Gaining knowledge of network topology...",
 	"splashScreen.initialContactQueryComplete": "Initial nodes found.",
@@ -19,5 +19,6 @@
 	"uiRoutinesManager.installRoutinesWindowTitle": "uiRoutinesManager.installRoutinesWindowTitle",
 	"UiDaemon.trayTitle": "UiDaemon.trayTitle",
 	"UiDaemon.menu.quit.title": "Quit",
+    "UiDaemon.menu.about.title": "About",
 	"splashScreen.undefined": "splashScreen.undefined"
 }
