--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -18,7 +18,7 @@
 	"uiRoutinesManager.installRoutinesButtonPlaceholder": "uiRoutinesManager.installRoutinesButtonPlaceholder",
 	"uiRoutinesManager.installRoutinesWindowTitle": "uiRoutinesManager.installRoutinesWindowTitle",
 	"UiDaemon.trayTitle": "UiDaemon.trayTitle",
-	"UiDaemon.menu.quit.title": "Quit",
+	"UiDaemon.menu.quit.title": "Quit Peeriod",
     "UiDaemon.menu.about.title": "About",
 	"splashScreen.undefined": "splashScreen.undefined"
 }
