--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -10,13 +10,13 @@
 	"splashScreen.foundEntryNode": "Entry node found. Gaining knowledge of network topology...",
 	"splashScreen.initialContactQueryComplete": "Initial nodes found.",
 	"splashScreen.topologyJoinComplete": "Successfully joined network. Preparing anonymity layer...",
-	"core.jj.uiroutine.chromeextension.name": "core.jj.uiroutine.chromeextension.name",
-	"core.jj.uiroutine.chromeextension.description": "core.jj.uiroutine.chromeextension.description",
-	"core.jj.uiroutine.chromeextension.installButtonLabel": "core.jj.uiroutine.chromeextension.installButtonLabel",
-	"uiRoutinesManager.installRoutinesHeadline": "uiRoutinesManager.installRoutinesHeadline",
-	"uiRoutinesManager.installRoutinesDescription": "uiRoutinesManager.installRoutinesDescription",
-	"uiRoutinesManager.installRoutinesButtonPlaceholder": "uiRoutinesManager.installRoutinesButtonPlaceholder",
-	"uiRoutinesManager.installRoutinesWindowTitle": "uiRoutinesManager.installRoutinesWindowTitle",
+	"core.jj.uiroutine.chromeextension.name": "Peeriod for Google Chrome",
+	"core.jj.uiroutine.chromeextension.description": "Peeriod’s user interface in a Google Chrome browser extension.",
+	"core.jj.uiroutine.chromeextension.installButtonLabel": "Install for Google Chrome",
+	"uiRoutinesManager.installRoutinesHeadline": "Install Peeriod User Interface",
+	"uiRoutinesManager.installRoutinesDescription": "Peeriod’s main application runs in the background. The user interface – where you can download, share and search files – lives in the browser. \n In order to use Peeriod’s full functionality, please install one of the following browser addons (currently only available for Chromium based browsers). The browser addon will not connect to the Internet!",
+	"uiRoutinesManager.installRoutinesButtonPlaceholder": "No Browser Selected",
+	"uiRoutinesManager.installRoutinesWindowTitle": "Install Peeriod User Interface",
 	"UiDaemon.trayTitle": "UiDaemon.trayTitle",
 	"UiDaemon.menu.quit.title": "Quit Peeriod",
     "UiDaemon.menu.about.title": "About",
