updated about window

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -19,6 +19,11 @@
 	"uiRoutinesManager.installRoutinesWindowTitle": "Install Peeriod User Interface",
 	"UiDaemon.trayTitle": "UiDaemon.trayTitle",
 	"UiDaemon.menu.quit.title": "Quit Peeriod",
-    "UiDaemon.menu.about.title": "About",
-	"splashScreen.undefined": "splashScreen.undefined"
+	"UiDaemon.menu.about.title": "About",
+	"splashScreen.undefined": "splashScreen.undefined",
+    "aboutWindow_title": "About Peeriod",
+    "aboutWindow_version": "Version %s",
+	"aboutWindow_link_home": "Peeriod Project",
+	"aboutWindow_link_github": "Github",
+	"aboutWindow_link_twitter": "Twitter"
 }
