updated update window title

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -27,7 +27,7 @@
 	"aboutWindow.linkHome": "Peeriod Project",
 	"aboutWindow.linkGithub": "Github",
 	"aboutWindow.linkTwitter": "Twitter",
-	"updateNotifyWindow.title": "Peeriod - Update Available",
+	"updateNotifyWindow.title": "Update Available",
 	"updateNotifyWindow.headline": "Update Available",
 	"updateNotifyWindow.description": "A new version of Peeriod is available. Please visit the official page and download the latest release!",
 	"updateNotifyWindow.downloadButtonLabel": "Visit Download Page"
